packages/flark_core/native/comrak_bridge/include/flark_v4.h

typedef uint32_t FlarkV4CertificationState;
typedef uint32_t FlarkV4Affinity;
typedef uint32_t FlarkV4ResultRecordKind;
typedef uint32_t FlarkV4HistoryDisposition;
typedef uint64_t FlarkV4TransactionHandle;
typedef uint64_t FlarkV4ContinuationHandle;
typedef uint64_t FlarkV4AnchorHandle;
typedef uint64_t FlarkV4HistoryToken;
typedef uint64_t FlarkV4Revision;
typedef uint64_t FlarkV4SnapshotId;
typedef uint64_t FlarkV4ProgressToken;
typedef struct FlarkV4AbiInfo {
  uint32_t struct_size;
  uint16_t abi_major;
  uint16_t abi_minor;
  uint64_t capability_bits;
  uint32_t max_small_edit_bytes;
  uint32_t max_bulk_chunk_bytes;
  uint32_t max_source_chunk_bytes;
  uint32_t max_result_bytes;
  uint32_t max_query_items;
  uint32_t max_transaction_edits;
  uint64_t reserved[3];
} FlarkV4AbiInfo;
typedef struct FlarkV4Outcome {
  uint32_t struct_size;
  uint32_t operation;
  uint32_t status;
  uint32_t progress_state;
  uint64_t primary_handle;
  uint64_t secondary_handle;
  uint64_t revision;
  uint64_t snapshot;
  uint64_t progress_token;
  uint64_t required_bytes;
  uint64_t written_bytes;
  uint64_t detail_code;
  uint64_t reserved[4];
} FlarkV4Outcome;
/* required_bytes is nonzero only for BUFFER_TOO_SMALL. For SOURCE_READ,
 * QUERY_VIEWPORT, and CONTINUATION_NEXT it always includes the fixed result
 * page header, including a header-only empty page. */

typedef struct FlarkV4SourceRange {
  uint64_t start_byte;
  uint64_t end_byte;
} FlarkV4SourceRange;
/* Prefix of every source/query/continuation output; payload starts at struct_size. */
typedef struct FlarkV4ResultPageHeader {
  uint32_t struct_size;
  uint16_t abi_major;
  uint16_t abi_minor;
  FlarkV4ResultRecordKind record_kind;
  FlarkV4CertificationState certification_state;
  FlarkV4Revision revision;
  FlarkV4SnapshotId snapshot;
  FlarkV4SourceRange requested_range;
  FlarkV4SourceRange covered_range;
  uint32_t item_count;
  uint32_t payload_bytes;
  FlarkV4ContinuationHandle continuation;
  uint64_t reserved[2];
} FlarkV4ResultPageHeader;
typedef struct FlarkV4EditDescriptor {
  uint64_t start_byte;
  uint64_t end_byte;
  uint64_t replacement_offset;
  uint64_t replacement_len;
} FlarkV4EditDescriptor;
typedef struct FlarkV4WorkBudget {
  uint64_t max_work_units;
  uint64_t advisory_max_micros;
  uint32_t max_result_items;
  uint32_t max_result_bytes;
} FlarkV4WorkBudget;
/* max_work_units must be nonzero on every request carrying this record.
 * QUERY_VIEWPORT and CONTINUATION_NEXT additionally require both result caps
 * to be nonzero. Every cap must remain within the negotiated maxima. */

typedef struct FlarkV4SessionRef {
  uint64_t session;
  uint64_t owner_token;
} FlarkV4SessionRef;
typedef struct FlarkV4NegotiateRequest {
  uint32_t struct_size;
  uint16_t requested_major;
  uint16_t requested_minor;
  uint64_t required_capability_bits;
} FlarkV4NegotiateRequest;
typedef struct FlarkV4SessionConfig {
  uint32_t struct_size;
  uint32_t parser_profile;
  uint64_t history_budget_bytes;
  uint64_t max_document_bytes;
  uint64_t flags;
  uint64_t reserved[4];
} FlarkV4SessionConfig;
typedef struct FlarkV4CreateRequest {
  uint32_t struct_size;
  uint32_t flags;
  uint64_t owner_token;
  uint64_t expected_total_bytes;
  FlarkV4SessionConfig config;
} FlarkV4CreateRequest;
/* CREATE_BEGIN input_len is at most MAX_SOURCE_CHUNK_BYTES. Larger initial
 * source must continue through CREATE_APPEND. */

typedef struct FlarkV4StageRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t transaction;
  uint64_t chunk_offset;
  uint64_t chunk_len;
  uint64_t reserved[2];
} FlarkV4StageRequest;
/* chunk_len must equal the entrypoint input_len or the call is INVALID_ARGUMENT. */

typedef struct FlarkV4SourceReadRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t revision;
  FlarkV4SourceRange range;
  uint64_t reserved[2];
} FlarkV4SourceReadRequest;
/* SOURCE_READ is OPEN-only, range length is at most MAX_SOURCE_CHUNK_BYTES,
 * and its SOURCE_BYTES page uses snapshot/continuation zero. Callers advance
 * explicit ranges; SOURCE_READ never creates a continuation. */

typedef struct FlarkV4SmallEditRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t expected_revision;
  uint32_t edit_count;
  uint32_t reserved_u32;
  uint64_t replacement_bytes_len;
  FlarkV4WorkBudget budget;
  uint64_t reserved[2];
} FlarkV4SmallEditRequest;
/* edit_count and replacement_bytes_len must equal the duplicate entrypoint
 * arguments or the call is INVALID_ARGUMENT. Descriptor replacement ranges
 * form an exact descriptor-order partition of the packed byte slice: no gaps,
 * overlap/reuse, reordering, or unreferenced tail. Descriptor bytes,
 * replacement bytes, and total deleted source bytes together must not exceed
 * FLARK_V4_MAX_SMALL_EDIT_BYTES; larger edits use the resumable bulk path. */

typedef struct FlarkV4EditIntentRequestV1 {
  uint32_t struct_size;
  uint32_t profile_id;
  FlarkV4SessionRef session;
  uint64_t expected_revision;
  FlarkV4AnchorHandle selection_base_anchor;
  FlarkV4AnchorHandle selection_extent_anchor;
  uint64_t logical_edit_id;
  uint64_t request_digest;
  uint64_t acknowledge_previous_logical_edit_id;
  uint64_t selection_generation;
  uint32_t intent;
  uint32_t selection_affinity;
  uint32_t selection_direction;
  uint32_t composition_active;
  FlarkV4WorkBudget budget;
  FlarkV4AnchorHandle target_anchor;
} FlarkV4EditIntentRequestV1;
typedef struct FlarkV4EditIntentReceiptV1 {
  uint32_t struct_size;
  uint32_t semantic_disposition;
  FlarkV4HistoryDisposition history_disposition;
  uint32_t flags;
  uint64_t logical_edit_id;
  uint64_t request_digest;
  FlarkV4Revision base_revision;
  FlarkV4Revision result_revision;
  FlarkV4SourceRange base_byte_range;
  FlarkV4SourceRange base_utf16_range;
  FlarkV4SourceRange result_byte_range;
  FlarkV4SourceRange result_utf16_range;
  uint64_t result_selection_utf16;
  uint32_t result_selection_affinity;
  uint32_t result_selection_direction;
  uint64_t result_source_byte_length;
  uint64_t result_source_utf16_length;
  FlarkV4SourceRange affected_result_utf16_range;
  FlarkV4HistoryToken history_token;
  uint32_t replacement_bytes;
  uint32_t presentation_transition;
  uint64_t reserved[2];
} FlarkV4EditIntentReceiptV1;
/* The replacement payload begins immediately after the fixed receipt.
 * Selection-bound keyboard intents require two collapsed downstream anchors
 * at the same current byte and target_anchor zero. Selection-independent
 * semantic actions require an owned target_anchor in the certified row and
 * preserve both canonical selection anchors. */

typedef struct FlarkV4SourceTransactionRequestV1 {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  FlarkV4Revision expected_revision;
  FlarkV4AnchorHandle selection_base_anchor;
  FlarkV4AnchorHandle selection_extent_anchor;
  uint64_t logical_edit_id;
  uint64_t request_digest;
  uint64_t acknowledge_previous_logical_edit_id;
  uint64_t selection_generation;
  FlarkV4SourceRange base_utf16_range;
  uint64_t result_selection_base_utf16;
  uint64_t result_selection_extent_utf16;
  FlarkV4Affinity selection_affinity;
  uint32_t selection_direction;
  uint64_t replacement_bytes_len;
  FlarkV4WorkBudget budget;
  /* Zero creates a standalone token. A nonzero ID may extend only the
   * adjacent native history tail carrying the same group identity. */
  uint64_t history_group_id;
} FlarkV4SourceTransactionRequestV1;
typedef struct FlarkV4SourceTransactionReceiptV1 {
  uint32_t struct_size;
  FlarkV4HistoryDisposition history_disposition;
  uint32_t flags;
  uint32_t reserved_u32;
  uint64_t logical_edit_id;
  uint64_t request_digest;
  FlarkV4Revision base_revision;
  FlarkV4Revision result_revision;
  FlarkV4SourceRange base_byte_range;
  FlarkV4SourceRange base_utf16_range;
  FlarkV4SourceRange result_byte_range;
  FlarkV4SourceRange result_utf16_range;
  uint64_t result_selection_base_utf16;
  uint64_t result_selection_extent_utf16;
  FlarkV4Affinity result_selection_affinity;
  uint32_t result_selection_direction;
  uint64_t result_source_byte_length;
  uint64_t result_source_utf16_length;
  FlarkV4SourceRange affected_result_utf16_range;
  FlarkV4HistoryToken history_token;
  uint64_t replacement_bytes;
  uint64_t reserved[2];
} FlarkV4SourceTransactionReceiptV1;
typedef struct FlarkV4StagedSourceTransactionRequestV1 {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  FlarkV4TransactionHandle transaction;
  FlarkV4Revision expected_revision;
  FlarkV4ProgressToken progress_token;
  FlarkV4AnchorHandle selection_base_anchor;
  FlarkV4AnchorHandle selection_extent_anchor;
  uint64_t logical_edit_id;
  uint64_t request_digest;
  uint64_t acknowledge_previous_logical_edit_id;
  uint64_t selection_generation;
  uint64_t result_selection_utf16;
  FlarkV4Affinity selection_affinity;
  uint32_t selection_direction;
  FlarkV4WorkBudget budget;
  uint64_t history_group_id;
  uint64_t reserved[2];
} FlarkV4StagedSourceTransactionRequestV1;
/* V1 requires a collapsed downstream result caret at the inserted range end
 * and history_group_id zero. BULK_BEGIN/BULK_APPEND stage the replacement;
 * this resumable commit returns FlarkV4SourceTransactionReceiptV1. A zero
 * transaction is accepted only to recover a matching stored terminal. */

typedef struct FlarkV4BulkBeginRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t expected_revision;
  FlarkV4SourceRange range;
  uint64_t expected_total_bytes;
  uint64_t reserved[2];
} FlarkV4BulkBeginRequest;
/* expected_total_bytes may be zero for a pure deletion. The named source
 * range may exceed the small-edit envelope because BULK_COMMIT is resumable. */

typedef struct FlarkV4TransactionRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t transaction;
  uint64_t expected_revision;
  FlarkV4ProgressToken progress_token;
  FlarkV4WorkBudget budget;
  uint64_t reserved[1];
} FlarkV4TransactionRequest;
/* COMMIT uses progress token zero to begin and echoes each nonzero returned
 * token to resume. ABORT requires progress token zero and detaches staged
 * storage into the session reclamation queue in one work unit. */

typedef struct FlarkV4PumpRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t expected_revision;
  FlarkV4ProgressToken progress_token;
  FlarkV4WorkBudget budget;
} FlarkV4PumpRequest;
/* progress_token zero begins pump work; a nonzero value must echo the latest
 * token returned for the same revision. */

typedef struct FlarkV4QueryRequest {
  uint32_t struct_size;
  uint32_t query_kind;
  FlarkV4SessionRef session;
  uint64_t revision;
  uint64_t snapshot;
  FlarkV4SourceRange range;
  uint64_t continuation;
  FlarkV4WorkBudget budget;
  uint64_t reserved[1];
} FlarkV4QueryRequest;
/* QUERY_VIEWPORT requires continuation == NONE. snapshot == LATEST selects and
 * pins the latest snapshot; every returned page names the resulting nonzero ID. */

typedef struct FlarkV4ContinuationRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t revision;
  uint64_t snapshot;
  uint64_t continuation;
  FlarkV4WorkBudget budget;
  uint64_t reserved[1];
} FlarkV4ContinuationRequest;
/* CREATE requires anchor and snapshot zero. TRANSFORM requires coordinate_kind,
 * snapshot, position, and affinity zero. RESOLVE requires snapshot, position,
 * and affinity zero. RELEASE requires every semantic field except anchor zero.
 * Create/transform/resolve use token zero to begin and echo it to resume;
 * release requires token zero and detaches in at most one work unit. */

typedef struct FlarkV4CoordinateRequest {
  uint32_t struct_size;
  uint32_t from_kind;
  uint32_t to_kind;
  uint32_t reserved_u32;
  FlarkV4SessionRef session;
  uint64_t revision;
  uint64_t snapshot;
  uint64_t position;
  FlarkV4ProgressToken progress_token;
  FlarkV4WorkBudget budget;
  uint64_t reserved[1];
} FlarkV4CoordinateRequest;
/* COORDINATE_CONVERT is revision-bound, requires snapshot == 0, and uses token
 * zero to begin followed by the latest returned token to resume. */

typedef struct FlarkV4HistoryRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t expected_revision;
  uint64_t history_token;
  FlarkV4ProgressToken progress_token;
  FlarkV4WorkBudget budget;
  uint64_t reserved[1];
} FlarkV4HistoryRequest;
typedef struct FlarkV4CloseRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t progress_token;
  FlarkV4WorkBudget budget;
  uint64_t reserved[1];
} FlarkV4CloseRequest;