packages/flark_core/lib/src/native/bindings.dart

import 'dart:ffi';

final class FlarkV4AbiInfo extends Struct {
  @Uint32()
  external int structSize;

  @Uint16()
  external int abiMajor;

  @Uint16()
  external int abiMinor;

  @Uint64()
  external int capabilityBits;

  @Uint32()
  external int maxSmallEditBytes;

  @Uint32()
  external int maxBulkChunkBytes;

  @Uint32()
  external int maxSourceChunkBytes;

  @Uint32()
  external int maxResultBytes;

  @Uint32()
  external int maxQueryItems;

  @Uint32()
  external int maxTransactionEdits;

  @Array(3)
  external Array<Uint64> reserved;
}

final class FlarkV4NegotiateRequest extends Struct {
  @Uint32()
  external int structSize;

  @Uint16()
  external int requestedMajor;

  @Uint16()
  external int requestedMinor;

  @Uint64()
  external int requiredCapabilityBits;
}

final class FlarkV4SessionConfig extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int parserProfile;

  @Uint64()
  external int historyBudgetBytes;

  @Uint64()
  external int maxDocumentBytes;

  @Uint64()
  external int flags;

  @Array(4)
  external Array<Uint64> reserved;
}

final class FlarkV4SessionRef extends Struct {
  @Uint64()
  external int session;

  @Uint64()
  external int ownerToken;
}

final class FlarkV4SourceRange extends Struct {
  @Uint64()
  external int startByte;

  @Uint64()
  external int endByte;
}

final class FlarkV4WorkBudget extends Struct {
  @Uint64()
  external int maxWorkUnits;

  @Uint64()
  external int advisoryMaxMicros;

  @Uint32()
  external int maxResultItems;

  @Uint32()
  external int maxResultBytes;
}

final class FlarkV4Outcome extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int operation;

  @Uint32()
  external int status;

  @Uint32()
  external int progressState;

  @Uint64()
  external int primaryHandle;

  @Uint64()
  external int secondaryHandle;

  @Uint64()
  external int revision;

  @Uint64()
  external int snapshot;

  @Uint64()
  external int progressToken;

  @Uint64()
  external int requiredBytes;

  @Uint64()
  external int writtenBytes;

  @Uint64()
  external int detailCode;

  @Array(4)
  external Array<Uint64> reserved;
}

final class FlarkV4CreateRequest extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int flags;

  @Uint64()
  external int ownerToken;

  @Uint64()
  external int expectedTotalBytes;

  external FlarkV4SessionConfig config;
}

final class FlarkV4StageRequest extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int flags;

  external FlarkV4SessionRef session;

  @Uint64()
  external int transaction;

  @Uint64()
  external int chunkOffset;

  @Uint64()
  external int chunkLen;

  @Array(2)
  external Array<Uint64> reserved;
}

final class FlarkV4TransactionRequest extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int flags;

  external FlarkV4SessionRef session;

  @Uint64()
  external int transaction;

  @Uint64()
  external int expectedRevision;

  @Uint64()
  external int progressToken;

  external FlarkV4WorkBudget budget;

  @Array(1)
  external Array<Uint64> reserved;
}

final class FlarkV4PumpRequest extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int flags;

  external FlarkV4SessionRef session;

  @Uint64()
  external int expectedRevision;

  @Uint64()
  external int progressToken;

  external FlarkV4WorkBudget budget;
}

final class FlarkV4EditDescriptor extends Struct {
  @Uint64()
  external int startByte;

  @Uint64()
  external int endByte;

  @Uint64()
  external int replacementOffset;

  @Uint64()
  external int replacementLen;
}

final class FlarkV4SmallEditRequest extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int flags;

  external FlarkV4SessionRef session;

  @Uint64()
  external int expectedRevision;

  @Uint32()
  external int editCount;

  @Uint32()
  external int reservedU32;

  @Uint64()
  external int replacementBytesLen;

  external FlarkV4WorkBudget budget;

  @Array(2)
  external Array<Uint64> reserved;
}

final class FlarkV4EditIntentRequestV1 extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int profileId;

  external FlarkV4SessionRef session;

  @Uint64()
  external int expectedRevision;

  @Uint64()
  external int selectionBaseAnchor;

  @Uint64()
  external int selectionExtentAnchor;

  @Uint64()
  external int logicalEditId;

  @Uint64()
  external int requestDigest;

  @Uint64()
  external int acknowledgePreviousLogicalEditId;

  @Uint64()
  external int selectionGeneration;

  @Uint32()
  external int intent;

  @Uint32()
  external int selectionAffinity;

  @Uint32()
  external int selectionDirection;

  @Uint32()
  external int compositionActive;

  external FlarkV4WorkBudget budget;

  @Uint64()
  external int targetAnchor;
}

final class FlarkV4EditIntentReceiptV1 extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int semanticDisposition;

  @Uint32()
  external int historyDisposition;

  @Uint32()
  external int flags;

  @Uint64()
  external int logicalEditId;

  @Uint64()
  external int requestDigest;

  @Uint64()
  external int baseRevision;

  @Uint64()
  external int resultRevision;

  external FlarkV4SourceRange baseByteRange;
  external FlarkV4SourceRange baseUtf16Range;
  external FlarkV4SourceRange resultByteRange;
  external FlarkV4SourceRange resultUtf16Range;

  @Uint64()
  external int resultSelectionUtf16;

  @Uint32()
  external int resultSelectionAffinity;

  @Uint32()
  external int resultSelectionDirection;

  @Uint64()
  external int resultSourceByteLength;

  @Uint64()
  external int resultSourceUtf16Length;

  external FlarkV4SourceRange affectedResultUtf16Range;

  @Uint64()
  external int historyToken;

  @Uint32()
  external int replacementBytes;

  @Uint32()
  external int presentationTransition;

  @Array(2)
  external Array<Uint64> reserved;
}

final class FlarkV4SourceTransactionRequestV1 extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int flags;

  external FlarkV4SessionRef session;

  @Uint64()
  external int expectedRevision;

  @Uint64()
  external int selectionBaseAnchor;

  @Uint64()
  external int selectionExtentAnchor;

  @Uint64()
  external int logicalEditId;

  @Uint64()
  external int requestDigest;

  @Uint64()
  external int acknowledgePreviousLogicalEditId;

  @Uint64()
  external int selectionGeneration;

  external FlarkV4SourceRange baseUtf16Range;

  @Uint64()
  external int resultSelectionBaseUtf16;

  @Uint64()
  external int resultSelectionExtentUtf16;

  @Uint32()
  external int selectionAffinity;

  @Uint32()
  external int selectionDirection;

  @Uint64()
  external int replacementBytesLen;

  external FlarkV4WorkBudget budget;

  @Uint64()
  external int historyGroupId;
}

final class FlarkV4SourceTransactionReceiptV1 extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int historyDisposition;

  @Uint32()
  external int flags;

  @Uint32()
  external int reservedU32;

  @Uint64()
  external int logicalEditId;

  @Uint64()
  external int requestDigest;

  @Uint64()
  external int baseRevision;

  @Uint64()
  external int resultRevision;

  external FlarkV4SourceRange baseByteRange;
  external FlarkV4SourceRange baseUtf16Range;
  external FlarkV4SourceRange resultByteRange;
  external FlarkV4SourceRange resultUtf16Range;

  @Uint64()
  external int resultSelectionBaseUtf16;

  @Uint64()
  external int resultSelectionExtentUtf16;

  @Uint32()
  external int resultSelectionAffinity;

  @Uint32()
  external int resultSelectionDirection;

  @Uint64()
  external int resultSourceByteLength;

  @Uint64()
  external int resultSourceUtf16Length;

  external FlarkV4SourceRange affectedResultUtf16Range;

  @Uint64()
  external int historyToken;

  @Uint64()
  external int replacementBytes;

  @Array(2)
  external Array<Uint64> reserved;
}

final class FlarkV4StagedSourceTransactionRequestV1 extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int flags;

  external FlarkV4SessionRef session;

  @Uint64()
  external int transaction;

  @Uint64()
  external int expectedRevision;

  @Uint64()
  external int progressToken;

  @Uint64()
  external int selectionBaseAnchor;

  @Uint64()
  external int selectionExtentAnchor;

  @Uint64()
  external int logicalEditId;

  @Uint64()
  external int requestDigest;

  @Uint64()
  external int acknowledgePreviousLogicalEditId;

  @Uint64()
  external int selectionGeneration;

  @Uint64()
  external int resultSelectionUtf16;

  @Uint32()
  external int selectionAffinity;

  @Uint32()
  external int selectionDirection;

  external FlarkV4WorkBudget budget;

  @Uint64()
  external int historyGroupId;

  @Array(2)
  external Array<Uint64> reserved;
}

final class FlarkV4BulkBeginRequest extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int flags;

  external FlarkV4SessionRef session;

  @Uint64()
  external int expectedRevision;

  external FlarkV4SourceRange range;

  @Uint64()
  external int expectedTotalBytes;

  @Array(2)
  external Array<Uint64> reserved;
}

final class FlarkV4CoordinateRequest extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int fromKind;

  @Uint32()
  external int toKind;

  @Uint32()
  external int reservedU32;

  external FlarkV4SessionRef session;

  @Uint64()
  external int revision;

  @Uint64()
  external int snapshot;

  @Uint64()
  external int position;

  @Uint64()
  external int progressToken;

  external FlarkV4WorkBudget budget;

  @Array(1)
  external Array<Uint64> reserved;
}

final class FlarkV4HistoryRequest extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int flags;

  external FlarkV4SessionRef session;

  @Uint64()
  external int expectedRevision;

  @Uint64()
  external int historyToken;

  @Uint64()
  external int progressToken;

  external FlarkV4WorkBudget budget;

  @Array(1)
  external Array<Uint64> reserved;
}

final class FlarkV4SourceReadRequest extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int flags;

  external FlarkV4SessionRef session;

  @Uint64()
  external int revision;

  external FlarkV4SourceRange range;

  @Array(2)
  external Array<Uint64> reserved;
}

final class FlarkV4QueryRequest extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int queryKind;

  external FlarkV4SessionRef session;

  @Uint64()
  external int revision;

  @Uint64()
  external int snapshot;

  external FlarkV4SourceRange range;

  @Uint64()
  external int continuation;

  external FlarkV4WorkBudget budget;

  @Array(1)
  external Array<Uint64> reserved;
}

final class FlarkV4ContinuationRequest extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int flags;

  external FlarkV4SessionRef session;

  @Uint64()
  external int revision;

  @Uint64()
  external int snapshot;

  @Uint64()
  external int continuation;

  external FlarkV4WorkBudget budget;

  @Array(1)
  external Array<Uint64> reserved;
}

final class FlarkV4CloseRequest extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int flags;

  external FlarkV4SessionRef session;

  @Uint64()
  external int progressToken;

  external FlarkV4WorkBudget budget;

  @Array(1)
  external Array<Uint64> reserved;
}

final class FlarkV4ResultPageHeader extends Struct {
  @Uint32()
  external int structSize;

  @Uint16()
  external int abiMajor;

  @Uint16()
  external int abiMinor;

  @Uint32()
  external int recordKind;

  @Uint32()
  external int certificationState;

  @Uint64()
  external int revision;

  @Uint64()
  external int snapshot;

  external FlarkV4SourceRange requestedRange;
  external FlarkV4SourceRange coveredRange;

  @Uint32()
  external int itemCount;

  @Uint32()
  external int payloadBytes;

  @Uint64()
  external int continuation;
